# hoozz_play_android

./: .gitignore  .gitmodules  LICENSE  README.md  ffigen.yaml  hoozz_play.code-workspace  pubspec.yaml
.github/workflows/: android.yml  main.yml
android/: build.gradle  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  MLX90640_I2C_Driver.h  export.h
android/app/src/main/cpp/mlx90640/: CMakeLists.txt  mlx90640.cpp
android/app/src/main/cpp/remote_sw/: CMakeLists.txt  gitt_log_impl.c  gitt_ssh_impl.c  remote_sw.c
android/app/src/main/java/com/example/hoozz_play/: MainActivity.java
android/app/src/main/java/com/example/hoozz_play/adapter/: ESPTouchAdapter.java  MLX90640Adapter.java
android/app/src/main/java/com/example/hoozz_play/esptouch/: ESPTouch.java
android/app/src/main/java/com/example/hoozz_play/serial/: MLX90640.java  UsbSerial.java
android/app/src/main/kotlin/com/example/hoozz_play/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
android/esptouch/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/adapter/: esptouch_adapter.dart  mlx90640_adapter.dart  remote_switch_adapter.dart
lib/core/: class_id.dart  crypto.dart  delayed_call.dart  device_binding.dart  device_config.dart  device_storage.dart  gradient_call.dart  parameter_stateful.dart  period_call.dart  simple_ctrl.dart  simple_showdialog.dart  simple_snackbar.dart  vpn_ctrl.dart
lib/pages/: button_led.dart  device_list.dart  home.dart  mlx90640.dart  pwd_sync.dart  remote_switch.dart  settings.dart  settings_about.dart  settings_author.dart  settings_license.dart  settings_vpn.dart  smart_ir.dart  smart_sensor.dart  tools.dart  tools_discover.dart  tools_esptouch.dart  voice_led.dart
lib/themes/: theme.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
